# CopyMate-App

./: .gitignore  MONOREPO_SETUP.md  README.md  add_projects.sh
GuardianLens/backend/: README.md  pyproject.toml
GuardianLens/backend/alembic/: env.py
GuardianLens/backend/app/: celery_app.py  config.py  main.py
GuardianLens/backend/app/api/: deps.py
GuardianLens/backend/app/core/: oauth_utils.py  security.py
GuardianLens/backend/app/crud/: base.py  crud_linked_account.py  crud_profile.py  crud_user.py
GuardianLens/backend/app/db/: base.py  base_class.py  session.py
GuardianLens/backend/app/models/: linked_account.py  profile.py  user.py
GuardianLens/backend/app/schemas/: linked_account.py  profile.py  token.py  user.py
GuardianLens/backend/app/tasks/: example.py
GuardianLens/backend/tests/: __init__.py  conftest.py  test_main.py
GuardianLens/backend/tests/core/: conftest.py  run_oauth_tests.py  test_oauth_utils.py
GuardianLens/backend/tests/tasks/: __init__.py  test_example.py
aiStory/backend/: Dockerfile  README.md  __init__.py  alembic.ini  config.py  main.py  pyproject.toml  verify_env.py
aiStory/backend/alembic/: env.py
aiStory/backend/alembic/versions/: 000001_initial_migration.py  000002_add_user_role.py  000003_add_photos_table.py  000004_add_ai_processing_fields.py  000005_add_stories_story_pages.py  000006_add_orders_table.py
aiStory/backend/docs/: ai_processing_architecture.md  ai_processing_aws_rekognition_spec.md  ai_processing_implementation.md  api_contracts.md  api_design_principles.md  api_documentation.md  auth_guide.md  configuration_guide.md  database_guide.md  database_schema.md  development_guide.md  photo_upload_ai_architecture.md  photo_upload_implementation.md  production_deployment.md
aiStory/backend/models/: __init__.py  base.py  order.py  photo.py  refresh_token.py  story.py  story_page.py  user.py
aiStory/backend/repositories/: __init__.py  base.py  photo_repository.py  sqlalchemy_base.py
aiStory/backend/routers/: __init__.py  auth.py  health.py  photos.py  protected.py  stories.py
aiStory/backend/schemas/: __init__.py  base.py  order.py  photo.py  photo_upload.py  story.py  story_page.py  user.py
aiStory/backend/services/: __init__.py
aiStory/backend/services/ai_processing/: __init__.py  ai_service.py  base.py  exceptions.py  factory.py
aiStory/backend/services/photo/: __init__.py  base.py  exceptions.py  factory.py  photo_service.py
aiStory/backend/services/storage/: __init__.py  base.py  factory.py  local_storage.py  s3_storage.py
aiStory/backend/services/tasks/: ai_processing_tasks.py  celery_app.py
aiStory/backend/tests/: __init__.py  test_database.py  test_main.py
aiStory/backend/tests/auth/: test_authorization.py  test_login.py  test_refresh_token.py  test_registration.py
aiStory/backend/tests/models/: test_order.py  test_photo.py  test_story.py  test_story_page.py
aiStory/backend/tests/repositories/: __init__.py  test_photo_repository.py
aiStory/backend/tests/routers/: __init__.py  test_photos.py  test_protected.py  test_stories.py
aiStory/backend/tests/schemas/: test_order.py  test_story.py  (+1 more)
aiStory/backend/utils/: auth.py  database.py
(+610 files in other folders)
